tests/more_annot/more_annot.exp
Error ---------------------------------------------------- client_object.js:3:16

Cannot assign `o.w.z.y` to `a` because string is incompatible with number.

Error: client_object.js:3
  3: var a:number = o.w.z.y;
                    ^^^^^^^ Cannot assign `o.w.z.y` to `a` because string [1] is incompatible with number [2].
  References:
    1: var o1 = { x: 0, y: "" };
                           ^^ [1]: string. See: object.js:1
    3: var a:number = o.w.z.y;
             ^^^^^^ [2]: number


Found 1 error
